--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
     "otp-generator": "^4.0.1"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.13.0",
+    "eslint": "^9.13.0",
+    "globals": "^15.11.0"
   }
 }
